--- a/Vienna/Interfaces/ru.lproj/MainMenu.strings
+++ b/Vienna/Interfaces/ru.lproj/MainMenu.strings
@@ -235,7 +235,7 @@
 /* Class = "NSMenuItem"; title = "Open Article Page in External Browser"; ObjectID = "1067"; */
 "1067.title" = "Открыть статью во внешнем браузере";
 
-/* Class = "NSMenuItem"; title = "Send Link by Email"; ObjectID = "1073"; */
+/* Class = "NSMenuItem"; title = "Email Link"; ObjectID = "1073"; */
 "1073.title" = "Отправить ссылку электронной почтой";
 
 /* Class = "NSMenuItem"; title = "Bigger Text"; ObjectID = "1084"; */
