--- a/Vienna/Interfaces/lt.lproj/MainMenu.strings
+++ b/Vienna/Interfaces/lt.lproj/MainMenu.strings
@@ -235,7 +235,7 @@
 /* Class = "NSMenuItem"; title = "Open Article Page in External Browser"; ObjectID = "1067"; */
 "1067.title" = "Straipsnio svetainę atidaryti išorinėje naršyklėje";
 
-/* Class = "NSMenuItem"; title = "Send Link by Email"; ObjectID = "1073"; */
+/* Class = "NSMenuItem"; title = "Email Link"; ObjectID = "1073"; */
 "1073.title" = "Siųsti nuorodą el. paštu";
 
 /* Class = "NSMenuItem"; title = "Bigger Text"; ObjectID = "1084"; */
