--- a/Vienna/Interfaces/pt.lproj/MainMenu.strings
+++ b/Vienna/Interfaces/pt.lproj/MainMenu.strings
@@ -238,7 +238,7 @@
 /* Class = "NSMenuItem"; title = "Open Article Page in External Browser"; ObjectID = "1067"; */
 "1067.title" = "Abrir página do artigo no navegador externo";
 
-/* Class = "NSMenuItem"; title = "Send Link by Email"; ObjectID = "1073"; */
+/* Class = "NSMenuItem"; title = "Email Link"; ObjectID = "1073"; */
 "1073.title" = "Enviar ligação por correio electrónico";
 
 /* Class = "NSMenuItem"; title = "Bigger Text"; ObjectID = "1084"; */
