--- a/Vienna/Interfaces/sv.lproj/MainMenu.strings
+++ b/Vienna/Interfaces/sv.lproj/MainMenu.strings
@@ -235,7 +235,7 @@
 /* Class = "NSMenuItem"; title = "Open Article Page in External Browser"; ObjectID = "1067"; */
 "1067.title" = "Öppna artikelsida i extern webbläsare";
 
-/* Class = "NSMenuItem"; title = "Send Link by Email"; ObjectID = "1073"; */
+/* Class = "NSMenuItem"; title = "Email Link"; ObjectID = "1073"; */
 "1073.title" = "Skicka länk via e-post";
 
 /* Class = "NSMenuItem"; title = "Bigger Text"; ObjectID = "1084"; */
@@ -429,6 +429,9 @@
 
 /* Class = "NSMenuItem"; title = "Smart Dashes"; ObjectID = "RtQ-eP-bfk"; */
 "RtQ-eP-bfk.title" = "Smarta streck";
+
+/* Class = "NSMenuItem"; title = "Share…"; ObjectID = "SSr-Ho-wep"; */
+"SSr-Ho-wep.title" = "Dela…";
 
 /* Class = "NSMenuItem"; title = "All Articles"; ObjectID = "t1E-6n-jtA"; */
 "t1E-6n-jtA.title" = "Alla artiklar";
