--- a/Vienna/Interfaces/uk.lproj/MainMenu.strings
+++ b/Vienna/Interfaces/uk.lproj/MainMenu.strings
@@ -235,7 +235,7 @@
 /* Class = "NSMenuItem"; title = "Open Article Page in External Browser"; ObjectID = "1067"; */
 "1067.title" = "Відкрити сторінку статті у зовнішньому браузері";
 
-/* Class = "NSMenuItem"; title = "Send Link by Email"; ObjectID = "1073"; */
+/* Class = "NSMenuItem"; title = "Email Link"; ObjectID = "1073"; */
 "1073.title" = "Надіслати посилання на ел. пошту";
 
 /* Class = "NSMenuItem"; title = "Bigger Text"; ObjectID = "1084"; */
