--- a/Vienna/Interfaces/zh-Hans.lproj/MainMenu.strings
+++ b/Vienna/Interfaces/zh-Hans.lproj/MainMenu.strings
@@ -235,7 +235,7 @@
 /* Class = "NSMenuItem"; title = "Open Article Page in External Browser"; ObjectID = "1067"; */
 "1067.title" = "在浏览器中打开文章页面";
 
-/* Class = "NSMenuItem"; title = "Send Link by Email"; ObjectID = "1073"; */
+/* Class = "NSMenuItem"; title = "Email Link"; ObjectID = "1073"; */
 "1073.title" = "通过邮件方式发送";
 
 /* Class = "NSMenuItem"; title = "Bigger Text"; ObjectID = "1084"; */
