--- a/Vienna/Interfaces/zh-Hant.lproj/MainMenu.strings
+++ b/Vienna/Interfaces/zh-Hant.lproj/MainMenu.strings
@@ -235,7 +235,7 @@
 /* Class = "NSMenuItem"; title = "Open Article Page in External Browser"; ObjectID = "1067"; */
 "1067.title" = "在外部瀏覽器中打開文章頁面";
 
-/* Class = "NSMenuItem"; title = "Send Link by Email"; ObjectID = "1073"; */
+/* Class = "NSMenuItem"; title = "Email Link"; ObjectID = "1073"; */
 "1073.title" = "以電子郵件傳送";
 
 /* Class = "NSMenuItem"; title = "Bigger Text"; ObjectID = "1084"; */
