--- a/Vienna/Resources/es.lproj/Localizable.strings
+++ b/Vienna/Resources/es.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* No comment provided by engineer. */
+/* Fallback for feed items without a title */
 "(No title)" = "(Sin título)";
 
 /* No comment provided by engineer. */
@@ -168,6 +168,9 @@
 /* Notification title */
 "Download failed" = "Error al descargar";
 
+/* Toolbar item tooltip */
+"Email a link to the current article or website" = "Enviar enlace del artículo o página web actual";
+
 /* Title of a button on an alert */
 "Empty" = "Vaciar";
 
@@ -188,9 +191,6 @@
 
 /* No comment provided by engineer. */
 "Error loading script '%@'" = "Error cargando script '%@'";
-
-/* No comment provided by engineer. */
-"Error parsing XML data in feed" = "Error al analizar los datos XML de la fuente";
 
 /* No comment provided by engineer. */
 "Error retrieving RSS feed:" = "Error recuperando suscripción";
@@ -497,12 +497,6 @@
 
 /* A formatted URL string with the mailto: URL scheme. */
 "Send email to %@ with subject “%@”" = "Enviar correo electrónico a %1$@ con asunto “%2$@”";
-
-/* No comment provided by engineer. */
-"Send Link" = "Enviar enlace";
-
-/* No comment provided by engineer. */
-"Send Links" = "Enviar enlaces";
 
 /* No comment provided by engineer. */
 "Show Filter Bar" = "Mostrar barra de filtro";
