--- a/Vienna/Resources/pt-BR.lproj/Localizable.strings
+++ b/Vienna/Resources/pt-BR.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* No comment provided by engineer. */
+/* Fallback for feed items without a title */
 "(No title)" = "(Sem título)";
 
 /* No comment provided by engineer. */
@@ -135,6 +135,9 @@
 /* Notification title */
 "Download failed" = "Descarregamento falhou";
 
+/* Toolbar item tooltip */
+"Email a link to the current article or website" = "Enviar um link para o artigo ou website atual";
+
 /* Title of a button on an alert */
 "Empty" = "Esvaziar";
 
@@ -152,9 +155,6 @@
 
 /* Already subscribed title */
 "Error" = "Erro";
-
-/* No comment provided by engineer. */
-"Error parsing XML data in feed" = "Erro ao decodificar dados XML na notícia";
 
 /* No comment provided by engineer. */
 "Export Completed" = "Exportação Completada";
@@ -371,12 +371,6 @@
 
 /* Title of a popup menu item */
 "Select…" = "Selecionar…";
-
-/* No comment provided by engineer. */
-"Send Link" = "Enviar Link";
-
-/* No comment provided by engineer. */
-"Send Links" = "Enviar Links";
 
 /* No comment provided by engineer. */
 "Show Filter Bar" = "Mostrar Barra de Filtragem";
